Bug 508864 - dolphin crashes when stating after closed with multiple tabs
Summary: dolphin crashes when stating after closed with multiple tabs
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: git-master
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Gleb Kasachou
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-28 17:42 UTC by alanas.00
Modified: 2025-08-30 10:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dolphin backtrace (2.51 KB, text/plain)
2025-08-28 17:42 UTC, alanas.00
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alanas.00 2025-08-28 17:42:53 UTC
Created attachment 184532 [details]
dolphin backtrace

STEPS TO REPRODUCE
1. run dolphin
2. new tab
3. close dolphin
4. run dolphin

OBSERVED RESULT
ASSERT: "!m_urlNavigatorConnected" in file /home/asd/s/dolphin/s/src/dolphinviewcontainer.cpp, line 289

EXPECTED RESULT
dolphin opens

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.14.0-29-generic (64-bit)
Graphics Platform: Wayland
libKF6XmlGui.so.6.18.0 commit: https://invent.kde.org/frameworks/kxmlgui/-/commit/7b10839471fd7454ab964346f807e4c32090d08d
dolphin commit: https://invent.kde.org/system/dolphin/-/commit/7d224aab06aab0b6fa53fbd1db5385705b254837

ADDITIONAL INFORMATION
first bad dolphin commit: https://invent.kde.org/system/dolphin/-/commit/60cc39930f1b0a78280712c8fe1447e919f018f8
Comment 1 Gleb Kasachou 2025-08-28 18:59:21 UTC
Thanks for the report. I'm working on fixing this.
Comment 2 Bug Janitor Service 2025-08-28 19:39:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1034
Comment 3 Méven 2025-08-30 10:57:58 UTC
Git commit 4d6d491a8f1e8cfaa68b71449b2479e468872742 by Méven Car, on behalf of Gleb Kasachou.
Committed on 30/08/2025 at 10:47.
Pushed by meven into branch 'master'.

DolphinTabWidget: Use setcurrentIndex() in readProperties()

M  +3    -15   src/dolphintabwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/4d6d491a8f1e8cfaa68b71449b2479e468872742