DolphinTabWidget: Use setcurrentIndex() in readProperties()

BUG: 508864